# FastAPI-BE

./: README.md  TemplateGenerator.ps1
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2505cc3f5c16_first_migrations.py  33c90d4298ce_initial_migrations.py
backend/src/: main.py
backend/src/task/: models.py  schemas.py  service.py
